# osmo-mitm

./: .gitignore  Makefile.am  README  configure.ac  encode_decode.sh  xor_hexstrings.py
include/: coder.h  lapdm_util.h
include/mitm/: coder.h  l1_util.h  lapdm_util.h  mitm.h  osmo_mitm.h  subscriber_mapping.h
include/virtphy/: common_util.h
src/: Makefile.am  cipherer.c  coder.c  dummy_coder_cipherer.c  dummycoder  encode_decode.sh  l1_util.c  lapdm_util.c  mitm_handler_imsi_catcher.c  mitm_handler_setup_manip.c  mitm_handler_simple.c  osmo-mitm.c  osmo_mitm.c  subscriber_mapping.c
src/data/: data_zeros  mobilex2--ms-virt--bts-virt--bsc-nitb_170306-successful_calls_between_ms1_ms2.pcapng  setup_1162  setup_1162_info
src/shared/: common_util.c
tests/encode_decode_test/: encode_decode.sh
tests/setup_manip_test/: result  setup_manip.sh  setup_manip_exec.sh
tests/setup_manip_test/test_data/: cipherstream  data_manip  remainder
